# secret-santa

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yaml  tests.yaml
source/: Argument.hpp  Configuration.hpp  Emailer.hpp  Main.cpp  Matchings.hpp  MessengerArgument.hpp  MessengerMain.cpp  MessengerProgram.hpp  MessengerSettings.hpp  Participant.hpp  Program.hpp  RandomizerArgument.hpp  RandomizerMain.cpp  RandomizerProgram.hpp  RandomizerSettings.hpp  Settings.hpp  String.hpp
source/Messenger/: Argument.hpp  Emailer.hpp  Main.cpp  Program.hpp  Settings.hpp
source/Randomizer/: Argument.hpp  Configuration.hpp  Main.cpp  Program.hpp  Settings.hpp
test/: Configuration.cpp  CreateSampleParticipant.hpp  Emailer.cpp  Example.cpp  Matchings.cpp  MessengerSettings.cpp  Participant.cpp  RandomizerSettings.cpp  Settings.cpp  String.cpp  configuration.yaml  matchings.yaml
test/Messenger/: Emailer.cpp  Settings.cpp
test/Randomizer/: Configuration.cpp  Settings.cpp
